登录与退出 token 校验

--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -30,3 +30,9 @@ body {
 .ant-list-split .ant-list-item {
   border-bottom: 1px solid #9a9a9a;
 }
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
+
