--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,3 +1,15 @@
 .home {
+  .header {
+    margin-top: 50px;
+  }
+
+  .actions {
+    display: flex;
+    justify-content: center;
+  }
+
+  .list {
+
+  }
 
 }
